<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    style="@style/base_padding"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/color_preview"
    />

    <View
      android:id="@+id/color_preview"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_marginTop="@dimen/marginv"
    />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginvbig"
      android:text="@string/color_saturation_brightness"
    />

    <LinearLayout android:id="@+id/sv_layout"
      android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginv"
      android:orientation="horizontal"
    />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginvbig"
      android:text="@string/color_hue"
    />

    <LinearLayout android:id="@+id/hue_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginv"
      android:orientation="horizontal"
    />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginvbig"
      android:text="@string/color_presets"
    />

    <GridLayout android:id="@+id/grid_layout"
      android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginv"
      android:orientation="horizontal"
      android:rowCount="4"
      android:columnCount="8"
    />

    <LinearLayout 
      android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      android:layout_gravity="end"
      android:gravity="end"
      android:layout_marginTop="@dimen/marginvbig" 
      >
      <Button android:id="@+id/btn_close"
        android:layout_marginEnd="@dimen/marginh" 
        style="@style/button_default"
        android:text="@string/button_close"
      />
      <Button android:id="@+id/btn_clear"
        android:layout_marginEnd="@dimen/marginh" 
        style="@style/button_default"
        android:text="@string/button_clear"
      />
      <Button android:id="@+id/btn_ok"
        style="@style/button_default"
        android:text="@string/button_ok"
      />
    </LinearLayout>
   					  
</LinearLayout>
