<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
  style="@style/base_padding"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reference_source"
    />

  <TextView
    android:id="@+id/reference_source"
    style="@style/edit_text_light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginv"
    android:padding="@dimen/paddingh"
    android:textIsSelectable="true"
    />

  <CheckBox
    android:id="@+id/reference_visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginvbig"
    android:text="@string/reference_visible"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginvbig"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    >
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/reference_opacity"
      />
    <TextView
      android:id="@+id/reference_opacity_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="@dimen/paddingh"
      />
  </LinearLayout>

  <SeekBar
    android:id="@+id/reference_opacity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:max="100"
    />

  <Button
    android:id="@+id/reference_replace"
    style="@style/button_default"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginvbig"
    android:text="@string/button_replace"
    />

  <LinearLayout android:id="@+id/help"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/marginvbig"
    >
    <Button android:id="@+id/button_help"
      style="@style/button_empty"
      android:text="@string/button_help"
    />
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="end"
      >
      <Button android:id="@+id/button_cancel"
        style="@style/button_default"
        android:text="@string/button_cancel"
        android:layout_marginEnd="@dimen/marginh"
      />
      <Button android:id="@+id/button_ok"
        style="@style/button_default"
        android:text="@string/button_save"
      />
    </LinearLayout>
  </LinearLayout>

</LinearLayout>
</ScrollView>
