<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <CheckBox
    android:id="@+id/ceiling_water_enabled"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/water_depth" />

  <EditText
    android:id="@+id/ceiling_water_depth"
    style="@style/edit_text_light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/water_depth"
    android:importantForAutofill="no"
    android:inputType="text"
    android:singleLine="true" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginv"
    android:text="@string/text_formatting" />

  <Spinner
    android:id="@+id/ceiling_text_font"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <CheckBox
      android:id="@+id/ceiling_text_bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_bold"
      android:textStyle="bold" />
    <CheckBox
      android:id="@+id/ceiling_text_italic"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_italic"
      android:textStyle="italic" />
    <CheckBox
      android:id="@+id/ceiling_text_underline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_underline" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ceiling_text_size" />
    <SeekBar
      android:id="@+id/ceiling_text_scale"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />
    <TextView
      android:id="@+id/ceiling_text_scale_value"
      android:layout_width="56dp"
      android:layout_height="wrap_content"
      android:gravity="end"
      android:text="100%" />
  </LinearLayout>
</LinearLayout>
